--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body>
 <nav>
     <div class="container nav-wrapper">
-        <a href="/" class="brand-logo">Muhammad Mohib</a>
+        <a href="/" class="brand-logo">Q N Software Services</a>
         <ul id="nav-mobile" class="right">
             <li><a href="/">Home</a></li>
         </ul>
